[package]
name = "lotm-common"
description = "Common types and utilities for LOTM"
version.workspace = true
edition.workspace = true

[dependencies]
vek = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
enum-map = { workspace = true }
strum = { workspace = true }
